--- a/final/index.html
+++ b/final/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="full" lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -17,7 +17,9 @@
         }
 
         body {
-            margin-bottom: 90px;
+            margin-top: 50px;
+            margin-bottom: 50px;
+            background: none;
         }
 
         #stream {
@@ -34,7 +36,7 @@
             bottom: 0;
             width: 100%;
             height: 85px;
-            background-color: #f5f5f5;
+            background-color: #000;
         }
 
         .footer .container {
@@ -44,6 +46,20 @@
 
         .footer p {
             margin: 5px 0px 5px 0px;
+        }
+
+        .container.main {
+            background: rgba(255,255,255,0.6);
+            border-radius: 10px;
+            border: 1px solid white;
+        }
+
+        .full {
+          background: url('http://i.imgur.com/3jYsoUE.jpg') no-repeat center center fixed;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;
         }
     </style>
 
@@ -63,32 +79,30 @@
 </head>
 
 <body>
-<div class="container text-center">
-    <h1>Smart Fridge
-        <small>Using node.js and raspberry pi</small>
+<div class="main container text-center">
+    <h1>RWTH Media Computing Fridge
+        <span class="label label-primary"> SMART! </span>
     </h1>
-
-    <hr>
 
     <div class="row">
         <div style="display:none" class="col-md-6 col-sm-12 col-xs-12" id="stream1">
-            Camera 1
             <img class="img-responsive" src="">
+            <small>Camera 1</small>
         </div>
         <div  style="display:none" class="col-md-6 col-sm-12 col-xs-12" id="stream2">
-            Camera 2
             <img class="img-responsive" src="">
+            <small>Camera 2</small>
         </div>
     </div>
-    <hr>
+
     <div class="row">
         <div  style="display:none" class="col-md-6 col-sm-12 col-xs-12" id="stream3">
-            Camera 3
             <img class="img-responsive" src="">
+            <small>Camera 3</small>
         </div>
         <div  style="display:none" class="col-md-6 col-sm-12 col-xs-12" id="stream4">
-            Camera 4
             <img class="img-responsive" src="">
+            <small>Camera 4</small>
         </div>
     </div>
 </div>
