add active camera endpoint

--- a/final/index.html
+++ b/final/index.html
@@ -17,8 +17,8 @@
         }
 
         body {
-            margin-top: 50px;
-            margin-bottom: 50px;
+            margin-top: 25px;
+            margin-bottom: 110px;
             background: none;
         }
 
@@ -87,22 +87,19 @@
     <div class="row">
         <div style="display:none" class="col-md-6 col-sm-12 col-xs-12" id="stream1">
             <img class="img-responsive" src="">
-            <small>Camera 1</small>
+            <p><small>Camera 1</small></p>
         </div>
         <div  style="display:none" class="col-md-6 col-sm-12 col-xs-12" id="stream2">
             <img class="img-responsive" src="">
-            <small>Camera 2</small>
+            <p><small>Camera 2</small></p>
         </div>
-    </div>
-
-    <div class="row">
         <div  style="display:none" class="col-md-6 col-sm-12 col-xs-12" id="stream3">
             <img class="img-responsive" src="">
-            <small>Camera 3</small>
+            <p><small>Camera 3</small></p>
         </div>
         <div  style="display:none" class="col-md-6 col-sm-12 col-xs-12" id="stream4">
             <img class="img-responsive" src="">
-            <small>Camera 4</small>
+            <p><small>Camera 4</small></p>
         </div>
     </div>
 </div>
