update the background image

--- a/final/index.html
+++ b/final/index.html
@@ -55,7 +55,7 @@
         }
 
         .full {
-          background: url('https://i.imgur.com/3jYsoUE.jpg') no-repeat center center fixed;
+          background: url('https://i.imgur.com/7M5uOA1.jpg') no-repeat center center fixed;
           -webkit-background-size: cover;
           -moz-background-size: cover;
           -o-background-size: cover;
